# cell_report_card

./: .gitignore  README.md  cell_report_card_query_1.sql  requirements.txt  run_cell_report_card.bat  setup.cfg  setup.py
cell_report_card/: cell_report_card.py  cell_report_card_query_1.sql  cell_report_card_query_2.sql  run_cell_report_card.bat
cell_report_card/data/: cell_report_card_query_2.sql
