[metadata]
name = cell_report_card
version = 0.1.0
description-file=README.md
readme = "README.md"
Homepage = "https://github.com/sarahwallingbell/cell_report_card"

[project]
readme = "README.md"
[project.urls]
Homepage = "https://github.com/sarahwallingbell/cell_report_card"

[options]
packages = find:
install_requires =
    pandas
    morph_utils

[options.entry_points]
console_scripts =
    run_cell_report_card_query = cell_report_card.cell_report_card:console_scripts